--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <noscript>Bitte JavaScript aktivieren, um die App zu nutzen.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
