feat: optimize seo metadata

--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
+    <meta name="application-name" content="Logorama" />
+    <meta name="robots" content="index,follow" />
     <meta
       name="description"
       content="Logorama ist eine persönliche Log-App als Progressive Web App – offline nutzbar, mit JSON Export & Import."
     />
+    <meta
+      name="keywords"
+      content="Logorama, Logbuch, Lernjournal, Offline App, Notizen, JSON Export, Productivity"
+    />
+    <meta property="og:locale" content="de_DE" />
+    <meta property="og:site_name" content="Logorama" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Logorama – Offline Lernjournal & PWA" />
+    <meta
+      property="og:description"
+      content="Dokumentiere Fortschritte offline, filtere Einträge und exportiere deine Daten als JSON – alles in einer PWA."
+    />
+    <meta property="og:image" content="icons/icon-512.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Logorama – Offline Lernjournal & PWA" />
+    <meta
+      name="twitter:description"
+      content="Notizen & Fortschritte offline festhalten, filtern und exportieren."
+    />
+    <meta name="twitter:image" content="icons/icon-512.png" />
+    <link rel="canonical" href="https://logorama.app/" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
